# senlytics

./: LICENSE  README.md  pyproject.toml  setup.py
senlytics/: core.py
