[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senlytics"
version = "0.1.0"
description = "Tools for fetching and analyzing low-cost air quality sensor data"
authors = [{ name="Congbo Song", email="congbo.song@ncas.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pandas", "requests", "tqdm", "numpy", "matplotlib", "scipy", "statsmodels", "hvplot", "holoviews"]
